# PracticePlus

./: CMakeLists.txt  README.md  mod.json
docs/: SPF.hexpat
src/: main.cpp
src/hooks/: ActiveSaveObject.cpp  ActiveSaveObject.hpp  AdvancedFollowInstance.cpp  AdvancedFollowInstance.hpp  CAState.cpp  CAState.hpp  CCArray.cpp  CCArray.hpp  CheckpointObject.cpp  CheckpointObject.hpp  CollisionTriggerAction.cpp  CollisionTriggerAction.hpp  CountTriggerAction.cpp  CountTriggerAction.hpp  DynamicSaveObject.cpp  DynamicSaveObject.hpp  EffectManagerState.cpp  EffectManagerState.hpp  EndLevelLayer.cpp  EndLevelLayer.hpp  EnterEffectInstance.cpp  EnterEffectInstance.hpp  EventTriggerInstance.cpp  EventTriggerInstance.hpp  FMODAudioState.cpp  FMODAudioState.hpp  FMODQueuedMusic.cpp  FMODQueuedMusic.hpp  FMODSoundState.cpp  FMODSoundState.hpp  FMODSoundState_padded.cpp  FMODSoundState_padded.hpp  GJGameLevel.cpp  GJGameLevel.hpp  GJGameState.cpp  GJGameState.hpp  GJShaderState.cpp  GJShaderState.hpp  GroupCommandObject2.cpp  GroupCommandObject2.hpp  (+30 more)
src/hooks/cocos2d/: CCArray.cpp  CCArray.hpp  CCArray.inl  CCDirector.cpp  CCDirector.hpp  CCNode.cpp  CCNode.hpp  CCObject.cpp  CCObject.hpp  CCTransitionFade.cpp  CCTransitionFade.hpp
src/managers/: StartpointManager.cpp  StartpointManager.hpp
src/util/: InputStream.cpp  InputStream.hpp  OutputStream.cpp  OutputStream.hpp  debug.cpp  debug.hpp  math.hpp
